Fix bug with not showing completed workouts